Added Inside Info and Added link to github accounts

--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,6 @@
     <div id="news"></div>
   </body>
   <footer>
-    Project Stockify by Viet & Zoheb
+    Project Stockify by <a href="https://github.com/vietbuiminh">Viet</a> & <a href="https://github.com/ZohebMOPO">Zoheb</a> | <a href="">DevPost</a>
   </footer>
 </html>
