--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div class="container">
       <div class="top-bar">
-        <h1>😁Stockify</h1>
+        <h1>😁Stocksify</h1>
         <div class="input-box">
           <input type="text" placeholder="GME" id="inputData" />
           <button type="button" onclick="getInputValue();">🔍</button>
