Changed the name

--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,6 @@
     <div id="news"></div>
   </body>
   <footer>
-    Project Stockify by <a href="https://github.com/vietbuiminh">Viet</a> & <a href="https://github.com/ZohebMOPO">Zoheb</a> | <a href="https://devpost.com/software/stocking-m2z3vh">DevPost</a>
+    Project Stocksify by <a href="https://github.com/vietbuiminh">Viet</a> & <a href="https://github.com/ZohebMOPO">Zoheb</a> | <a href="https://devpost.com/software/stocking-m2z3vh">DevPost</a>
   </footer>
 </html>
